# showtime

./: CHANGELOG.md  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: publish-to-test-pypi.yml
showtime/: __init__.py  api.py  command.py  config.py  database.py  output.py  showtime.py  types.py
showtime-cli/: command.py  output.py
tests/: api_test.py  command_test.py  config_test.py  database_test.py  showtime_test.py
tests/helpers/: __init__.py
