[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pylint]
max-line-length = 120

[tool.autopep8]
max_line_length = 120

[tool.tox]
legacy_tox_ini = """
[testenv]
deps = pytest
commands = pytest
[testenv:doc]
deps = interrogate
skip_install = true
commands = interrogate --quiet --fail-under 80 showtime tests
"""

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 95
exclude = ["setup.py", "docs"]
verbose = 0
quiet = false
