[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
norecursedirs = "tests/helpers"

[tool.pylint.format]
max-line-length = 120

[tool.autopep8]
max_line_length = 120

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39,mypy,doc
[testenv]
deps =
    pytest
    pytest-cov
    cmd2_ext_test
commands = pytest
[testenv:mypy]
deps =
    mypy
    ratelimit-stubs
    types-python-dateutil
    types-requests
    types-urllib3
commands = mypy -p showtime
[testenv:doc]
deps = interrogate
skip_install = true
commands = interrogate --quiet --fail-under 80 showtime
"""

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 95
exclude = ["setup.py", "docs"]
verbose = 0
quiet = false


[tool.mypy]
plugins = "tinydb.mypy_plugin"
